--- a/client/src/Components/Layouts/Header/Header.css
+++ b/client/src/Components/Layouts/Header/Header.css
@@ -40,13 +40,13 @@
     background-color: #00843D;
 }
 
-.courses-menu , .gestiones-menu {
+.courses-menu , .gestiones-menu, .empleados-menu {
     position: relative;
     width: auto;
     height: auto;
 }
 
-.courses,.gestiones {
+.courses,.gestiones, .empresas, .empleados {
     color: white;
     border-radius: 2rem;
     background-color: transparent;
@@ -67,7 +67,7 @@
     width: auto;
 }
 
-.dropdown-courses, .dropdown-gestiones {
+.dropdown-courses, .dropdown-gestiones, .dropdown-empleados {
     position: absolute;
     top: 2.5rem;
     left: 0;
@@ -82,7 +82,7 @@
     height: auto;
 }
 
-.dropdown-courses button, .dropdown-gestiones button {
+.dropdown-courses button, .dropdown-gestiones button, .dropdown-empleados button {
     background: transparent;
     border: none;
     color: white;
@@ -95,7 +95,7 @@
     height: auto;
 }
 
-.dropdown-courses button:hover, .dropdown-gestiones button:hover {
+.dropdown-courses button:hover, .dropdown-gestiones button:hover, .dropdown-empleados button:hover {
     background-color: #005c2e;
     border-radius: 0.5rem;
 }
