agregado estilo de correos electronicos

--- a/client/src/Components/Pages/ResetPassword/ResetPassword.css
+++ b/client/src/Components/Pages/ResetPassword/ResetPassword.css
@@ -9,24 +9,26 @@
   bottom: 72%;
   left: 5%;
   text-align: center;
-  
+
 }
-#forgot-password-container2{
+
+#reset-password-container {
   display: flex;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 132, 61, 10);
-    background: radial-gradient(circle, rgba(0, 132, 61, 1) 11%, rgba(37, 153, 70, 1) 21%, rgba(76, 175, 80, 1) 29%, rgba(66, 145, 69, 1) 34%, rgba(53, 106, 55, 1) 40%, rgba(39, 63, 40, 1) 50%, rgba(26, 26, 26, 1) 71%);
-    justify-content: center;
-    align-items: center;
-    transform: translate(-50%, -50%);
-    z-index: 1000;
-    padding: 20px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 132, 61, 10);
+  background: radial-gradient(circle, rgba(0, 132, 61, 1) 11%, rgba(37, 153, 70, 1) 21%, rgba(76, 175, 80, 1) 29%, rgba(66, 145, 69, 1) 34%, rgba(53, 106, 55, 1) 40%, rgba(39, 63, 40, 1) 50%, rgba(26, 26, 26, 1) 71%);
+  justify-content: center;
+  align-items: center;
+  transform: translate(-50%, -50%);
+  z-index: 1000;
+  padding: 20px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
 }
+
 .password-requirements_resetPassword {
   width: 10rem;
   height: auto;
@@ -58,9 +60,8 @@
   width: 142px;
   height: 115px;
   background: #b0b0b0;
-  clip-path: path(
-    "M142 115C142 2 0 115 0 0H130C138.581 2.52132 141.503 5.87638 142 16.5V115Z"
-  );
+  clip-path: path("M142 115C142 2 0 115 0 0H130C138.581 2.52132 141.503 5.87638 142 16.5V115Z"
+    );
   opacity: 0.3;
   border-style: none;
   cursor: pointer;
