--- a/client/src/Components/Pages/Who_we_are/Who_we_are.css
+++ b/client/src/Components/Pages/Who_we_are/Who_we_are.css
@@ -1,3 +1,60 @@
-.div{
-    color: blue;
+.who_we_are {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.container_description_who {
+  width: 50%;
+  height: auto;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  padding: 8rem 0 0 0;
+  gap: 2rem;
+  text-wrap: wrap;
+
+  & .title_who {
+    padding: 0 0 0 3rem;
+    width: 80%;
+    height: auto;
+    text-align: start;
+    font-size: 42px;
+    font-weight: 700;
+    letter-spacing: 3px;
+    width: 80%;
+    height: auto;
+    color: #fff;
+    font-size: 48px;
+
+    & .span_somos {
+      color: #00843d;
+    }
+  }
+
+  & .description_who {
+    width: 70%;
+    height: auto;
+    text-align: start;
+    font-weight: normal;
+    font-size: 16px;
+    color: #fff;
+  }
+}
+
+.ilustration_who {
+  width: 50%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.ilustration_who > .image_who {
+  width: 70%;
+  margin-top: -6rem;
+  height: auto;
 }
