--- a/client/src/Components/UI/Modal_Calendar/EditCalendar/Calendar.css
+++ b/client/src/Components/UI/Modal_Calendar/EditCalendar/Calendar.css
@@ -65,6 +65,8 @@
   font-size: 1.8rem;
   text-align: center;
   width: 100%;
+  margin-right: 50vw;
+  position: absolute;
 }
 
 .highlight {
@@ -74,28 +76,23 @@
 .date-inputs {
   display: flex;
   justify-content: space-between;
-  margin-top: 50px;
-  width: 85%;
-  margin-left: auto;
-  margin-bottom: 15vh;
+  margin-top: 55px;
+  margin-right: -15vw;
 }
 
 .organized-date-inputs label {
   display: flex;
   font-size: 1rem;
   color: #ccc;
-  width: 45%;
+  margin-top: 13vh;
 }
 
 .date-inputs input[type="date"] {
-  margin-left: 10px;
-  padding: 8px 12px;
   border-radius: 8px;
   border: 1px solid #333;
   background-color: #111;
   color: #eee;
   font-size: 1.1rem;
-  width: 7vw;
 }
 
 .calendar-card-wrapper {
@@ -195,9 +192,9 @@
   font-size: 1rem;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  display: block;
-  margin: 0 auto;
   margin-left: 45vw;
+  margin-bottom: 10vh;
+  position: absolute;;
 }
 
 .organized-save-button {
