--- a/client/src/Components/UI/Modal_SignIn/Modal_SignIn.css
+++ b/client/src/Components/UI/Modal_SignIn/Modal_SignIn.css
@@ -5,7 +5,7 @@
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.579);
-    display: none;
+    display: flex;
     justify-content: center;
     align-items: center;
     transform: translate(-50%, -50%);
@@ -169,3 +169,12 @@
     margin-right: 8px;
     accent-color: #00843D;
 }
+
+.button_registerGoogle{
+    background: linear-gradient(50deg, #b0b0b00f, #00843e7e);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+}     
+
