reparado estilos y posicion de boton iniciar sesion con google

--- a/client/src/Components/Pages/ForgotPassword/ForgotPassword.css
+++ b/client/src/Components/Pages/ForgotPassword/ForgotPassword.css
@@ -10,15 +10,15 @@
     align-items: center;
     transform: translate(-50%, -50%);
     z-index: 1000;
-    padding: 20px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+    padding: 1.25rem;
+    box-shadow: 0rem .25rem .625rem rgba(0, 0, 0, 0.3);
 }
 
 .container_form_forgotPassword {
-    width: 400px;
-    height: 550px;
+    width: 25rem;
+    height: 34.375rem;
     background-color: #1a1a1a;
-    border-radius: 15px;
+    border-radius: .9375rem;
     display: flex;
     flex-direction: column;
     overflow: hidden;
@@ -27,36 +27,36 @@
 
 
 .triangle_01 {
-    width: 184px;
-    height: 53px;
+    width: 11.5rem;
+    height: 3.3125rem;
     background: linear-gradient(50deg, #b0b0b0, #1a1a1a);
     opacity: 5%;
     clip-path: polygon(30% 0%, 0% 100%, 100% 100%);
     position: relative;
-    left: 5rem;
-    top: 8.4rem;
+    left: 80px;
+    top: 134.4px;
 }
 
 .triangle_02 {
-    width: 276px;
-    height: 80px;
+    width: 17.25rem;
+    height: 5rem;
     background: linear-gradient(50deg, #b0b0b0, #1a1a1a);
     opacity: 5%;
     clip-path: polygon(30% 0%, 0% 100%, 100% 100%);
     position: relative;
-    left: 9rem;
-    top: 3.4rem;
+    left: 144px;
+    top: 54.4px;
 }
 
 .triangle_03 {
-    width: 184px;
-    height: 53px;
+    width: 11.5rem;
+    height: 3.3125rem;
     background: linear-gradient(50deg, #b0b0b0, #1a1a1a);
     opacity: 5%;
     clip-path: polygon(30% 0%, 0% 100%, 100% 100%);
     position: relative;
-    left: 12.5rem;
-    top: 1px;
+    left: 200px;
+    top: .0625rem;
 }
 
 .container_triangles_01 {
@@ -64,19 +64,19 @@
     height: auto;
     transform: rotate(180deg);
     position: relative;
-    top: 1px;
+    top: .0625rem;
 }
 
 .container_triangles_02_forgot {
     width: auto;
     height: auto;
     position: relative;
-    top: 177px;
+    top: 11.0625rem;
 }
 
 .closeModal {
-    width: 142px;
-    height: 115px;
+    width: 8.875rem;
+    height: 7.1875rem;
     background: #b0b0b0;
     clip-path: path("M142 115C142 2 0 115 0 0H130C138.581 2.52132 141.503 5.87638 142 16.5V115Z");
     opacity: 0.3;
@@ -89,7 +89,7 @@
     height: auto;
     position: relative;
     top: 27%;
-    font-size: 18px;
+    font-size: 1.125rem;
     font-weight: 400;
     z-index: 1000;
     color: #fff;
@@ -98,14 +98,14 @@
 }
 
 .container_return {
-    width: 142px;
-    height: 142px;
+    width: 8.875rem;
+    height: 8.875rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     position: relative;
-    bottom: 393px;
-    left: 258px;
+    bottom: 24.5625rem;
+    left: 16.125rem;
 }
 
 
@@ -116,7 +116,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 2rem;
+    gap: 32px;
     position: relative;
     bottom: 65%;
     left: 5%;
@@ -126,7 +126,7 @@
 .container_form_forgotPassword h2 {
     width: 100%;
     height: auto;
-    font-size: 26px;
+    font-size: 1.625rem;
     text-align: center;
 }
 
@@ -136,23 +136,23 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 2rem;
+    gap: 32px;
 }
 
 .container_form_forgotPassword form input {
-    width: 278px;
-    height: 48px;
-    border-radius: 15px;
+    width: 17.375rem;
+    height: 3rem;
+    border-radius: .9375rem;
     background-color: transparent;
     border-style: none;
-    border: 1px solid #fff;
-    padding-left: 1rem;
+    border: .0625rem solid #fff;
+    padding-left: 16px;
 }
 
 .container_form_forgotPassword form button {
-    width: 294px;
-    height: 48px;
-    border-radius: 15px;
+    width: 18.375rem;
+    height: 3rem;
+    border-radius: .9375rem;
     border-style: none;
     background-color: #00843D;
 }
@@ -160,16 +160,16 @@
 .container_form_forgotPassword form p {
     width: 90%;
     height: auto;
-    font-size: 16px;
+    font-size: 1rem;
 
 }
 
 .result_forgotPasswod{
     width: 60%;
     height: auto;
-    font-size: 12px;
+    font-size: .75rem;
     position: relative;
-    bottom: 22rem;
+    bottom: 352px;
     background-color: #00843e7c;
-    padding: 5px;
+    padding: .3125rem;
 }
