--- a/client/src/Components/UI/Modal_SignIn/Modal_SignIn.css
+++ b/client/src/Components/UI/Modal_SignIn/Modal_SignIn.css
@@ -10,19 +10,19 @@
     align-items: center;
     transform: translate(-50%, -50%);
     z-index: 1000;
-    padding: 20px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+    padding: 1.25rem;
+    box-shadow: 0rem .25rem .625rem rgba(0, 0, 0, 0.3);
 
 }
 
 .modalSignIn {
-    width: 900px;
-    height: 550px;
+    width: 56.25rem;
+    height: 34.375rem;
     background-color: #1A1A1A;
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 15px;
+    border-radius: .9375rem;
     overflow: hidden;
 }
 
@@ -31,7 +31,7 @@
     height: auto;
     position: relative;
     top: 27%;
-    font-size: 18px;
+    font-size: 1.125rem;
     font-weight: 400;
     z-index: 1000;
     color: #fff;
@@ -40,13 +40,13 @@
 }
 
 .container_return_signIn {
-    width: 142px;
-    height: 142px;
+    width: 8.875rem;
+    height: 8.875rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     position: relative;
-    bottom: 225px;
+    bottom: 14.0625rem;
     left: 0;
     z-index: 1000;
 }
@@ -56,7 +56,7 @@
 }
 
 .title_signIn {
-    margin-bottom: 2rem;
+    margin-bottom: 32px;
 }
 
 .modalOptions {
@@ -76,21 +76,21 @@
     height: 100%;
     display: flex;
     align-items: center;
-    margin-top: -0.5rem;
-    padding-left: 7px;
+    margin-top: -8px;
+    padding-left: .4375rem;
 }
 
 .remember-session input[type="checkbox"] {
     width: auto;
     height: auto;
-    margin-right: 8px;
+    margin-right: .5rem;
 }
 
 .remember-session label {
     width: auto;
     height: auto;
     color: #fff;
-    font-size: 11px;
+    font-size: .6875rem;
 
 }
 
@@ -98,9 +98,9 @@
     cursor: pointer;
     width: auto;
     height: auto;
-    font-size: 12px;
+    font-size: .75rem;
     color: #00843D;
-    margin-top: 2rem;
+    margin-top: 32px;
     z-index: 1000;
 }
 
@@ -111,9 +111,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    border-radius: 15px;
+    border-radius: .9375rem;
     opacity: 98%;
-    gap: 1rem;
+    gap: 16px;
 }
 
 .option_signUp>h3,
@@ -126,30 +126,30 @@
 
 .option_signUp>.logo {
 
-    margin: 4rem 0 1rem 0;
+    margin: 64px 0 16px 0;
 }
 
 .option_signUp>img {
-    width: 15rem;
+    width: 240px;
     height: auto;
 }
 
 
 .option_signUp>button {
-    width: 137px;
+    width: 8.5625rem;
     height: auto;
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 100;
-    border-radius: 10px;
+    border-radius: .625rem;
     background-color: #00843D;
     border-style: none;
-    margin-top: 1rem;
-    padding: 10px 0 10px 0;
+    margin-top: 16px;
+    padding: .625rem 0 .625rem 0;
 
 }
 
 .option_signUp>h3 {
-    font-size: 18px;
+    font-size: 1.125rem;
 }
 
 .container_form_signIn {
@@ -160,13 +160,13 @@
 }
 
 .otherOption {
-    margin: -13px 0 -28px 0;
+    margin: -0.8125rem 0 -1.75rem 0;
 }
 
 .remember-session input[type="checkbox"] {
     width: auto;
     height: auto;
-    margin-right: 8px;
+    margin-right: .5rem;
     accent-color: #00843D;
 }
 
@@ -176,6 +176,32 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 1rem;
+    gap: 16px;
+}
+
+.container_triangles_01_login {
+    width: auto;
+    height: auto;
+    transform: rotate(180deg);
+    position: relative;
+    top: 5rem;
+    z-index: 500;
+}
+
+.container_triangles_02_login {
+    height: auto;
+    position: relative;
+    top: -5rem;
+    z-index: 500;
+}
+
+.google-login-container {
+    margin-top: 2.1rem;
+    width: 100%;
+    align-items: center;
+    padding: 0 20px;
+    bottom: 1.2rem;
+    position: relative;
+    left: 0.2rem;
 }
 
