--- a/client/src/Components/UI/Modal_SignUp/Modal_SignUp.css
+++ b/client/src/Components/UI/Modal_SignUp/Modal_SignUp.css
@@ -323,3 +323,13 @@ height: auto;
       width: 25px;
       height: auto;
   }
+
+.google-login-container {
+    margin-top: 2.1rem;
+    width: 100%;
+    align-items: center;
+    padding: 0 20px;
+    bottom: 1.2rem;
+    position: relative;
+    left: 0.2rem;
+}
