--- a/client/src/Components/Pages/SeeMyProfile/SeeMyProfile.css
+++ b/client/src/Components/Pages/SeeMyProfile/SeeMyProfile.css
@@ -331,7 +331,14 @@
     background-color: #b0b0b0;
     border-radius: 10px;
     border-style: none;
+    background: center / 70% no-repeat url('../../../assets/Icons/buttonEdit.png'),
+    #b0b0b0;
     
+}
+
+.updateProfile.cancel {
+  background-image: url('../../../assets/Icons/cerca.png');
+  background-size: 60%;
 }
 
 .updateProfile1{
@@ -344,6 +351,8 @@
     background-color: #b0b0b0;
     border-radius: 10px;
     border-style: none;
+    background: center / 70% no-repeat url('../../../assets/Icons/marca-de-verificacion.png'),
+    #b0b0b0;
     
 }
 
