--- a/client/src/Components/UI/Modal_SignUp/Modal_SignUp.css
+++ b/client/src/Components/UI/Modal_SignUp/Modal_SignUp.css
@@ -2,17 +2,16 @@
     position: fixed;
     top: 50%;
     left: 50%;
-    width: 100%; 
+    width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.579);
-    display: none; 
+    display: flex;
     justify-content: center;
     align-items: center;
-    transform: translate(-50%, -50%); 
-    z-index: 1000; 
+    transform: translate(-50%, -50%);
+    z-index: 1000;
     padding: 20px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
-
 }
 
 .modalSignUp{
