--- a/client/src/Components/Pages/SeeMyProfile/SeeMyProfile.css
+++ b/client/src/Components/Pages/SeeMyProfile/SeeMyProfile.css
@@ -320,3 +320,47 @@
   border-style: none;
   border: 1px solid #b0b0b0;
 }
+
+.updateProfile{
+    position: absolute;
+    z-index: 999999999;
+    top:6.1rem;
+    right: 3rem;
+    width: 4rem;
+    height: 4rem;
+    background-color: #b0b0b0;
+    border-radius: 10px;
+    border-style: none;
+    background: center / 70% no-repeat url('../../../assets/Icons/buttonEdit.png'),
+    #b0b0b0;
+    
+}
+
+.updateProfile.cancel {
+  background-image: url('../../../assets/Icons/cerca.png');
+  background-size: 60%;
+}
+
+.updateProfile1{
+    position: absolute;
+    z-index: 999999999;
+    top:11rem;
+    right: 3rem;
+    width: 4rem;
+    height: 4rem;
+    background-color: #b0b0b0;
+    border-radius: 10px;
+    border-style: none;
+    background: center / 70% no-repeat url('../../../assets/Icons/marca-de-verificacion.png'),
+    #b0b0b0;
+    
+}
+
+.input_updateData{
+    width: 9rem;
+    height: auto;
+    background-color: transparent;
+    border-radius: 10px;
+    border-style: none;
+    border: 1px solid #b0b0b0;
+}
