--- a/client/src/Components/Pages/Courses/Consult/ConsultCourses.css
+++ b/client/src/Components/Pages/Courses/Consult/ConsultCourses.css
@@ -191,3 +191,10 @@
     margin-bottom: 2rem;
     opacity: 0.5;
 }
+
+.img_course{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 1rem;
+}
