--- a/client/src/Components/UI/Modal_Calendar/EditCalendar/ECalendar.css
+++ b/client/src/Components/UI/Modal_Calendar/EditCalendar/ECalendar.css
@@ -198,7 +198,7 @@
   user-select: none;
 }
 
-.save-button {
+.save-button-calendar{
   background-color: #007700;
   color: white;
   border: none;
@@ -220,6 +220,6 @@
   border-radius: 15px;
 }
 
-.save-button:hover {
+.save-button-calendar:hover {
   background-color: #00aa00;
 }
