--- a/client/src/Components/UI/NavBar/NavBar.css
+++ b/client/src/Components/UI/NavBar/NavBar.css
@@ -27,8 +27,10 @@
     display: flex;
     justify-content: center;    
     align-items: center;
-    color: #ffff;
-    padding: 1rem;
+    color: #00843D;
+    padding: 0.5rem;
+    font-weight: 600;
+    font-size: 2rem;
 }
 
 
