--- a/client/src/Components/UI/NavBar/NavBar.css
+++ b/client/src/Components/UI/NavBar/NavBar.css
@@ -67,7 +67,7 @@
     gap: 1rem;
 
 }
-.container_options_profile>button{
+.container_options_profile>button, .btn-notifications {
     width: 2rem;
     height:2rem;
     border-style: none;
@@ -80,7 +80,13 @@
     padding: 5px;
 }
 
-.container_options_profile>button>img{
+.notifications-menu{
+    position: relative;
+    width: auto;
+    height: auto;
+}
+
+.container_options_profile>button>img, .img_notifications{
     width: 100%;
     height: auto;
     padding: 0.5rem;
@@ -95,4 +101,70 @@
     justify-content: center;
     align-items: center;
     padding: 0;
+}
+
+.dropdown-notifications {
+    position: absolute;
+    top: 2.8rem;
+    left: -14px;
+    background-color: #007736;
+    border-radius: 1rem;
+    display: flex;
+    flex-direction: column;
+    padding: 0.5rem 0;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    z-index: 100;
+    width: 200px;
+    height: auto;
+}
+
+.dropdown-notifications>.notification-item{
+    width: auto;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.container-img-notifications{
+    width: 2rem;
+    height: 2rem;
+    background-color: #b0b0b0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    
+    
+    
+}
+.container-img-notifications>img {
+    width: 60%;
+    height: auto;
+    object-fit: cover;
+}
+
+.container-text-notifications{
+    width: auto;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0.5rem 0.5rem;
+}
+
+.container-text-notifications>p{
+    width: auto;
+    height: auto;
+    font-size: 14px;
+    margin-bottom: 0.2rem;
+    text-align: start;
+    font-weight: 600;
+}
+
+.notification-affair{
+    width: 100%;
+    height: auto;
+    font-size: 12px;
 }
