--- a/client/src/Components/Layouts/Main/Main.css
+++ b/client/src/Components/Layouts/Main/Main.css
@@ -46,4 +46,13 @@
     display: flex;
     justify-content: center;
     margin-top: 10rem;
+    /* flex-wrap: wrap; */
+}
+
+@media (max-width: 768px){
+    .container_main{
+        flex-direction: column-reverse;
+        align-items: center;
+        margin-top: 3rem;
+    }
 }
