--- a/client/src/Components/Pages/Who_we_are/Who_we_are.css
+++ b/client/src/Components/Pages/Who_we_are/Who_we_are.css
@@ -58,3 +58,37 @@
   margin-top: -6rem;
   height: auto;
 }
+
+@media (max-width: 768px) {
+  .container_description_who {
+    width: 100%;
+    height: auto;
+    padding: 2rem 0;
+
+    & .title_who {
+      padding: 0;
+      width: 100%;
+      text-align: center;
+      font-size: 32px;
+      margin-top: -4rem;
+      letter-spacing: 1px;
+    }
+
+    & .description_who {
+      width: 80%;
+      text-align: justify;
+      font-size: 16px;
+      margin-top: 1rem;
+    }
+  }
+
+  .ilustration_who {
+    width: 100%;
+    height: auto;
+
+    & > .image_who {
+      width: 80%;
+      margin-top: 0;
+    }
+  }
+}
