--- a/client/src/Components/Pages/Courses/SeeCourse/AttendanceManagement.css
+++ b/client/src/Components/Pages/Courses/SeeCourse/AttendanceManagement.css
@@ -622,7 +622,6 @@
     justify-content: center;
     gap: 20px;
     margin-bottom: 30px;
-    position: absolute;
     width: auto;
     bottom: -3rem;
 }
@@ -705,7 +704,8 @@
     color: #fff;
     font-size: 16px;
     cursor: pointer;
-    position: absolute;
+    margin-left: 30rem;
+    margin-top: -3.5rem;
     top: 28.3rem;
     right: 5rem;
 }
@@ -1535,7 +1535,7 @@
 }
 
 .modal-attendance-register .simple-attendance-list {
-    width: auto !important;
+    width: 21rem !important;
     height: 15rem !important;
     overflow-y: auto !important;
     background-color: #0b2e1b !important;
@@ -1546,82 +1546,95 @@
 .modal-attendance-register .simple-attendance-item {
     width: auto !important;
     height: auto !important;
-    padding: 0.8rem !important;
+    padding: 0.6rem 0rem !important;
     border-bottom: 1px solid rgb(255 255 255 / 100%) !important;
+    justify-content: space-between;
+    display: flex;
 }
 
 .modal-attendance-register .simple-attendance-info {
+    width: 19rem !important;
     height: 2rem !important;
     display: flex !important;
-    justify-content: flex-start !important;
     align-items: center !important;
     color: white !important;
     text-align: left !important;
-    position: relative !important;
+    gap: 3rem;
 }
 
 .modal-attendance-register .simple-attendance-name {
     font-size: 1.2rem !important;
     color: white !important;
-    order: 2 !important;
-    position: relative !important;
     right: 12rem !important;
     width: 8rem !important;
     height: auto !important;
     white-space: nowrap !important;
     display: inline-block !important;
+    margin-bottom: 0 !important;
 }
 
 .modal-attendance-register .simple-attendance-name-2 {
     font-size: 1.2rem !important;
     color: white !important;
-    order: 2 !important;
-    position: relative !important;
-    right: 11rem !important;
+    right: 12rem !important;
     width: 8rem !important;
     height: auto !important;
     white-space: nowrap !important;
     display: inline-block !important;
+    margin-bottom: 0 !important;
 }
 
+.container-document {
+    width: 8rem;
+    height: auto;
+}
+
+.container-document-2 {
+    width: 8rem;
+    height: auto;
+}
 
 .modal-attendance-register .simple-attendance-document {
+    width: 7rem !important;
     font-size: 0.9rem !important;
-    margin-bottom: 0.5rem !important;
+    margin-bottom: 0.4rem !important;
     color: white !important;
-    position: relative !important;
-    right: 7rem !important;
-    top: 0.8rem !important;
-    order: 1 !important;
+
 }
 
 .modal-attendance-register .simple-attendance-document-2 {
+    width: 7rem !important;
     font-size: 0.9rem !important;
-    margin-bottom: 0.5rem !important;
+    margin-bottom: 0.4rem !important;
     color: white !important;
-    position: relative !important;
-    right: 6rem !important;
-    top: 0.8rem !important;
-    order: 1 !important;
 }
 
 
 .modal-attendance-register .simple-attendance-status {
     font-size: 0.9rem !important;
     margin: 0 !important;
-    position: relative !important;
-    top: 0 !important;
-    left: 10rem !important;
     color: white !important;
 }
 
 .modal-attendance-register .simple-attendance-status-2 {
     font-size: 0.9rem !important;
     margin: 0 !important;
-    position: relative !important;
-    top: 0 !important;
-    left: 11rem !important;
     color: white !important;
+}
+
+.iconFilterAttendance {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    width: 2rem;
+    height: 2rem;
+}
+
+.IconAttendance {
+    width: 1.5rem;
+    height: 1.5rem;
+    cursor: pointer;
 }
 
 /* Estilos para el scrollbar */
